implement displaying rescale job logs
