# api/src/generated/models/get_job_logs_o_k_body.go
@@ -1,0 +1,83 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// GetJobLogsOKBody JobLogs
+// swagger:model getJobLogsOKBody
+type GetJobLogsOKBody struct {
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// logs
+	Logs []*JobLog `json:"logs"`
+}
+
+// Validate validates this get job logs o k body
+func (m *GetJobLogsOKBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLogs(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *GetJobLogsOKBody) validateLogs(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Logs) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Logs); i++ {
+		if swag.IsZero(m.Logs[i]) { // not required
+			continue
+		}
+
+		if m.Logs[i] != nil {
+			if err := m.Logs[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("logs" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *GetJobLogsOKBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *GetJobLogsOKBody) UnmarshalBinary(b []byte) error {
+	var res GetJobLogsOKBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
