# api/src/generated/models/job_detail_all_of1.go
@@ -1,0 +1,82 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// JobDetailAllOf1 Finished
+// swagger:model jobDetailAllOf1
+type JobDetailAllOf1 struct {
+
+	// logs
+	// Required: true
+	Logs []*JobLog `json:"logs"`
+}
+
+// Validate validates this job detail all of1
+func (m *JobDetailAllOf1) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLogs(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *JobDetailAllOf1) validateLogs(formats strfmt.Registry) error {
+
+	if err := validate.Required("logs", "body", m.Logs); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Logs); i++ {
+		if swag.IsZero(m.Logs[i]) { // not required
+			continue
+		}
+
+		if m.Logs[i] != nil {
+			if err := m.Logs[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("logs" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *JobDetailAllOf1) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *JobDetailAllOf1) UnmarshalBinary(b []byte) error {
+	var res JobDetailAllOf1
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
