# api/src/generated/restapi/operations/job/get_job_detail_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package job
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/rescale-labs/scaleshift/api/src/generated/models"
+)
+
+// GetJobDetailOKCode is the HTTP code returned for type GetJobDetailOK
+const GetJobDetailOKCode int = 200
+
+/*GetJobDetailOK OK
+
+swagger:response getJobDetailOK
+*/
+type GetJobDetailOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.JobDetail `json:"body,omitempty"`
+}
+
+// NewGetJobDetailOK creates GetJobDetailOK with default headers values
+func NewGetJobDetailOK() *GetJobDetailOK {
+
+	return &GetJobDetailOK{}
+}
+
+// WithPayload adds the payload to the get job detail o k response
+func (o *GetJobDetailOK) WithPayload(payload *models.JobDetail) *GetJobDetailOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get job detail o k response
+func (o *GetJobDetailOK) SetPayload(payload *models.JobDetail) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetJobDetailOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetJobDetailDefault Unexpected error
+
+swagger:response getJobDetailDefault
+*/
+type GetJobDetailDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetJobDetailDefault creates GetJobDetailDefault with default headers values
+func NewGetJobDetailDefault(code int) *GetJobDetailDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetJobDetailDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get job detail default response
+func (o *GetJobDetailDefault) WithStatusCode(code int) *GetJobDetailDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get job detail default response
+func (o *GetJobDetailDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get job detail default response
+func (o *GetJobDetailDefault) WithPayload(payload *models.Error) *GetJobDetailDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get job detail default response
+func (o *GetJobDetailDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetJobDetailDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
